<resources>
    <string name="app_name">NotesCommand</string>
    <string name="text_name_plate">Nombre del plato</string>
    <string name="image_of_plate">image of plate</string>
    <string name="text_description_plate">Descripcion extensa del plato que estamos mostrando.</string>
    <string name="loren_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ultricies massa vitae nulla commodo efficitur. Cras in risus rutrum, faucibus turpis non, imperdiet nunc. Integer tempus bibendum turpis, ut cursus urna volutpat non.</string>
    <string name="image_of_egg">image of egg</string>
    <string name="image_of_milk">image of milk</string>
    <string name="image_of_penauts">image of penauts</string>
    <string name="image_of_mollusc">image of mollusc</string>
    <string name="image_of_gluten">image of gluten</string>
    <string name="image_of_fish">image of fish</string>
    <string name="image_of_crustaceans">image of crustaceans</string>
    <string name="price_format">%.2f €</string>
    <string name="return_text">Volver</string>
    <string name="account_text">Cuenta</string>
    <string name="order_text">Plato</string>
    <string name="total_acoount">TOTAL DE LA CUENTA</string>
    <string name="title_screem_1">Salón</string>
    <string name="title_screem_2">Comanda Mesa</string>
    <string name="title_screem_3">Menú</string>
    <string name="title_screem_4">Información del plato</string>
    <string name="exit">Salir</string>
    <string name="mesa_1">MESA 1</string>
    <string name="mesa_2">MESA 2</string>
    <string name="mesa_3">MESA 3</string>
    <string name="mesa_4">MESA 4</string>
    <string name="mesa_5">MESA 5</string>
    <string name="mesa_6">MESA 6</string>
    <string name="mesa">Mesa</string>
</resources>
