<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name_text_plate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/text_name_plate"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/price_text_plate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Paella de marisco" />

    <TextView
        android:id="@+id/price_text_plate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="viewEnd"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/name_text_plate"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="12 €" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text_plate">

        <ImageView
            android:id="@+id/image_plate"
            android:layout_width="213dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_weight="1"
            android:contentDescription="@string/image_of_plate"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/plato2"
            tools:layout_editor_absoluteY="106dp" />

        <TextView
            android:id="@+id/description_text_plate"
            android:layout_width="360dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/text_description_plate"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="66dp"
            android:padding="32dp"
            tools:text="@string/loren_ipsum" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/allergens_linearlayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="@dimen/margin_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <ImageView
            android:id="@+id/egg_allergens_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/image_of_egg"
            android:tint="@color/off_color"
            app:srcCompat="@drawable/egg" />

        <ImageView
            android:id="@+id/milk_allergens_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/image_of_milk"
            android:tint="@color/off_color"
            app:srcCompat="@drawable/milk" />

        <ImageView
            android:id="@+id/penauts_allergens_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/image_of_penauts"
            android:tint="@color/off_color"
            app:srcCompat="@drawable/peanuts" />

        <ImageView
            android:id="@+id/mollusc_allergens_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/image_of_mollusc"
            android:tint="@color/off_color"
            app:srcCompat="@drawable/mollusc" />

        <ImageView
            android:id="@+id/gluten_allergens_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/image_of_gluten"
            android:tint="@color/off_color"
            app:srcCompat="@drawable/gluten" />

        <ImageView
            android:id="@+id/fish_allergens_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/image_of_fish"
            android:tint="@color/off_color"
            app:srcCompat="@drawable/fish" />

        <ImageView
            android:id="@+id/crustaceans_allergens_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/image_of_crustaceans"
            android:tint="@color/off_color"
            app:srcCompat="@drawable/crustaceans" />
    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="234dp" />


</android.support.constraint.ConstraintLayout>